# myBasicFunctions

./: .gitignore  README.md  compare_api_local.py  create_rag_info.py  download_podcast.py  get_summaries.py  prepare_podcast_transcripts.py  pyproject.toml  rearrange_jsons.py  renaming.sh  test_asyncio.py  test_inference_endpoint.py  test_transcribe.py  transcribe_podcasts.py
src/: audio_functions.py  get_transcripts.py  get_youtube_vid_urls.py  text_manip_functions.py
