[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "openai>=0.28.0",
    "langchain>=0.0.27",
    "pandas>=2.0.3",
    "google-api-python-client>=2.100.0",
    "install>=1.3.5",
    "youtube-transcript-api>=0.6.1",
    "pytube>=15.0.0",
    "pydub>=0.25.1",
    "tiktoken>=0.5.1",
    "dotenv>=0.0.5",
    "python-dotenv>=1.0.0",
    "docx>=0.2.4",
    "transformers>=4.33.3",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "torchaudio>=2.0.2",
    "python-docx>=0.8.11",
    "datasets>=2.14.5",
    "soundfile>=0.12.1",
    "librosa>=0.10.1",
    "setuptools>=68.2.2",
    "whisper>=1.1.10",
    "spacy>=3.7.1",
    "spacy-langdetect>=0.1.2",
    "pip>=23.2.1",
    "deep-translator>=1.11.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

